# haskellbook-hpfp

./: BitUtil.hs  Ch17.hs  Ch17_BadMonoid.hs  Ch17_Exercises.hs  Ch17_ExercisesTests.hs  Ch17_ZipList.hs  Ch18.hs  Ch18_BadMonad.hs  Ch18_EitherMonad.hs  Ch18_Exercises.hs  Ch18_ExercisesTests.hs  Ch18_MaybeMonad.hs  Ch18_Tests.hs  Ch19.hs  Ch20.hs  Ch20_Exercises.hs  Ch21_Exercises.hs  Ch21_ExercisesTests.hs  Ch22.hs  Ch22_Exercises.hs  Ch22_PrettyReader.hs  Ch23.hs  Ch23_Exercises.hs  Ch23_FizzBuzz.hs  Ch23_RandomExample.hs  Ch23_RandomExample2.hs  Ch23_Tests.hs  Ch24_AltParsing.hs  Ch24_Backtracking.hs  Ch24_DataIni.hs  Ch24_Dot.hs  Ch24_DotTests.hs  Ch24_Exercises.hs  Ch24_Fractions.hs  Ch24_IPAddress.hs  Ch24_IPAddressTests.hs  Ch24_Integer.hs  Ch24_IntegerTests.hs  Ch24_LearnParsers.hs  Ch24_LogFile.hs  (+70 more)
projects/addition/: Addition.cabal  Addition.hs  ChangeLog.md  LICENSE
projects/hangman/: hangman.cabal  test.hs
projects/hangman/.stack-work/install/x86_64-osx/lts-7.1/8.0.1/flag-cache/: hangman-0.1.0.0  random-1.1-54KmMHXjttlERYcr1mvsAe  split-0.2.3.1-IJKK4pOCYGKud0jZImZke
projects/hangman/src/: Hangman.hs  Main.hs
projects/morse/: morse.cabal
projects/morse/src/: Main.hs  Morse.hs
projects/morse/tests/: tests.hs
